--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,31 @@ body{
 }
 .card img{
     position: absolute;
-    opacity: 1;
     height: 280px;
     transition: 0.6s;
+}
+@media (max-width: 550px){
+    .card{
+        width: 150px;
+        height: 150px;
+    }
+    .card img{
+        height: 170px;
+    }
+    .card article{
+        padding: 0px 0px 0px 15px;
+    }
+    .card h3{
+        font-size: 25px;
+    }
+    .card p{
+        font-size: 16px;
+        line-height: 18px;
+    }
+    .card a{
+        font-size: 18px;
+        padding: 8px 13px;
+        margin: 10px 0;
+    }
+    
 }
